[gd_scene load_steps=41 format=3 uid="uid://cfkhvq2wn3f7x"]

[ext_resource type="Shader" uid="uid://b1iqg43610fcj" path="res://shaders/menu.gdshader" id="1_3fb0x"]
[ext_resource type="FontFile" uid="uid://bh7kpk6fbm2dk" path="res://audio/music/Stacked pixel.ttf" id="1_jnxne"]
[ext_resource type="Script" uid="uid://bnow7gi827oc1" path="res://scripts/menu.gd" id="2_daxhn"]
[ext_resource type="Script" uid="uid://bdelsx0hex0x4" path="res://scripts/menu_path.gd" id="3_pnpp8"]
[ext_resource type="Texture2D" uid="uid://gu3ru4wkeis4" path="res://textures/title-sheet.png" id="5_dfs0h"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_c1xxu"]
shader = ExtResource("1_3fb0x")
shader_parameter/alpha = 1.0
shader_parameter/size = 100.0
shader_parameter/color1 = Color(0.352941, 0.411765, 0.533333, 1)
shader_parameter/color2 = Color(0.227451, 0.266667, 0.4, 1)
shader_parameter/speed = 0.5
shader_parameter/direction_x = -1.0
shader_parameter/direction_y = -1.0
shader_parameter/angle = 0.314

[sub_resource type="Curve2D" id="Curve2D_sjwrj"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 112.547, -127.974, 0, 0, 0, 0, 115.717, 337.862, 0, 0, 0, 0, 1123.72, 336.829, 0, 0, 0, 0, 1126.89, 148.842, 0, 0, 0, 0, -232.962, 281.053, 0, 0, 0, 0, -242.472, 657.026, 0, 0, 0, 0, 77.6793, 652.895, 0, 0, 0, 0, 77.6793, 473.171, 0, 0, 0, 0, 786.66, 462.842, 0, 0, 0, 0, 776.094, -170.322, 0, 0, 0, 0, 112.547, -127.974)
}
point_count = 11

[sub_resource type="Theme" id="Theme_vxk2j"]
default_font = ExtResource("1_jnxne")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0mwx6"]
bg_color = Color(0.0705882, 0.305882, 0.537255, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.172549, 0.909804, 0.960784, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0, 0, 0, 0.160784)
shadow_size = 4
shadow_offset = Vector2(6, 6)
anti_aliasing = false

[sub_resource type="AtlasTexture" id="AtlasTexture_aww4o"]
atlas = ExtResource("5_dfs0h")
region = Rect2(0, 0, 98, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_lv1gy"]
atlas = ExtResource("5_dfs0h")
region = Rect2(98, 0, 98, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_pnmam"]
atlas = ExtResource("5_dfs0h")
region = Rect2(196, 0, 98, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_3xno6"]
atlas = ExtResource("5_dfs0h")
region = Rect2(294, 0, 98, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_utlqm"]
atlas = ExtResource("5_dfs0h")
region = Rect2(392, 0, 98, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_8vd64"]
atlas = ExtResource("5_dfs0h")
region = Rect2(490, 0, 98, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_uuqsq"]
atlas = ExtResource("5_dfs0h")
region = Rect2(0, 58, 98, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_y1jls"]
atlas = ExtResource("5_dfs0h")
region = Rect2(98, 58, 98, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_v7f1c"]
atlas = ExtResource("5_dfs0h")
region = Rect2(196, 58, 98, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_cuwtk"]
atlas = ExtResource("5_dfs0h")
region = Rect2(294, 58, 98, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_0wdo7"]
atlas = ExtResource("5_dfs0h")
region = Rect2(392, 58, 98, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_klvdg"]
atlas = ExtResource("5_dfs0h")
region = Rect2(490, 58, 98, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_51ok4"]
atlas = ExtResource("5_dfs0h")
region = Rect2(0, 116, 98, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_k3pw5"]
atlas = ExtResource("5_dfs0h")
region = Rect2(98, 116, 98, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_mrc3x"]
atlas = ExtResource("5_dfs0h")
region = Rect2(196, 116, 98, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_xyn2a"]
atlas = ExtResource("5_dfs0h")
region = Rect2(294, 116, 98, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_nr7a5"]
atlas = ExtResource("5_dfs0h")
region = Rect2(392, 116, 98, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_p33ds"]
atlas = ExtResource("5_dfs0h")
region = Rect2(490, 116, 98, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_toiyu"]
atlas = ExtResource("5_dfs0h")
region = Rect2(0, 174, 98, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_dg84w"]
atlas = ExtResource("5_dfs0h")
region = Rect2(98, 174, 98, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_at8ux"]
atlas = ExtResource("5_dfs0h")
region = Rect2(196, 174, 98, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_ld7up"]
atlas = ExtResource("5_dfs0h")
region = Rect2(294, 174, 98, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_cjcmj"]
atlas = ExtResource("5_dfs0h")
region = Rect2(392, 174, 98, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_hm0ud"]
atlas = ExtResource("5_dfs0h")
region = Rect2(490, 174, 98, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_gf7ei"]
atlas = ExtResource("5_dfs0h")
region = Rect2(0, 232, 98, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_dofuk"]
atlas = ExtResource("5_dfs0h")
region = Rect2(98, 232, 98, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_83t5u"]
atlas = ExtResource("5_dfs0h")
region = Rect2(196, 232, 98, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_tc2tk"]
atlas = ExtResource("5_dfs0h")
region = Rect2(294, 232, 98, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_scuj7"]
atlas = ExtResource("5_dfs0h")
region = Rect2(392, 232, 98, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_cpvm5"]
atlas = ExtResource("5_dfs0h")
region = Rect2(490, 232, 98, 58)

[sub_resource type="SpriteFrames" id="SpriteFrames_o4pb8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_aww4o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lv1gy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pnmam")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3xno6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_utlqm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8vd64")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uuqsq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y1jls")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v7f1c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cuwtk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0wdo7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_klvdg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_51ok4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k3pw5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mrc3x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xyn2a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nr7a5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p33ds")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_toiyu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dg84w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_at8ux")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ld7up")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cjcmj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hm0ud")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gf7ei")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dofuk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_83t5u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tc2tk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_scuj7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cpvm5")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}]

[node name="MenuBackdrop" type="ColorRect"]
process_mode = 3
texture_filter = 1
material = SubResource("ShaderMaterial_c1xxu")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
script = ExtResource("2_daxhn")

[node name="Path2D" type="Path2D" parent="."]
position = Vector2(60.4821, -2.10191)
scale = Vector2(0.946429, 0.968153)
curve = SubResource("Curve2D_sjwrj")
script = ExtResource("3_pnpp8")

[node name="Line2D" type="Line2D" parent="Path2D"]

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2(112.547, -127.974)
rotation = 1.56399
rotates = false

[node name="Sprite2D" type="Sprite2D" parent="Path2D/PathFollow2D"]
unique_name_in_owner = true
texture_filter = 1
rotation = -1.5708
scale = Vector2(2, 2)
offset = Vector2(32, 0)

[node name="Modesty" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.815686)

[node name="Menu" type="Control" parent="."]
custom_minimum_size = Vector2(360, 300)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -95.0
offset_right = 180.0
offset_bottom = 205.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_vxk2j")

[node name="Panel" type="Panel" parent="Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0mwx6")

[node name="MarginContainer" type="MarginContainer" parent="Menu/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="Start" type="Button" parent="Menu/Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
focus_mode = 0
text = "start"

[node name="Fullscreen" type="Button" parent="Menu/Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
focus_mode = 0
text = "fullscreen"

[node name="Quit" type="Button" parent="Menu/Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
focus_mode = 0
text = "QUIT"

[node name="HBoxContainer" type="HBoxContainer" parent="Menu/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="Label" type="Label" parent="Menu/Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Volume"
horizontal_alignment = 1

[node name="SFXSlider" type="HSlider" parent="Menu/Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="VBoxContainer2" type="VBoxContainer" parent="Menu/Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="Label" type="Label" parent="Menu/Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Music"
horizontal_alignment = 1

[node name="MusicSlider" type="HSlider" parent="Menu/Panel/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.5
anchor_top = 0.248148
anchor_right = 0.5
anchor_bottom = 0.248148
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Control"]
texture_filter = 1
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_o4pb8")
frame_progress = 0.940063

[connection signal="pressed" from="Menu/Panel/MarginContainer/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="toggled" from="Menu/Panel/MarginContainer/VBoxContainer/Start" to="." method="_on_start_toggled"]
[connection signal="pressed" from="Menu/Panel/MarginContainer/VBoxContainer/Fullscreen" to="." method="_on_fullscreen_pressed"]
[connection signal="pressed" from="Menu/Panel/MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
